# AI-MLP

./: CMakeLists.txt  build.sh
src/: AI.cpp  AI.hpp  Main.cpp  Matrix.hpp  NN.hpp
